Fixed the --open argument handler to work for files relative to the working directory